@@ -3,6 +3,7 @@ ART 3.8
 * Fix for error when run with java 7
 * Have configurable roles
 * Added :reportId: and :jobId: tags
+* Don't output extra tabs for tsv report format
 * Updated jxls
 
 ART 3.7
